[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lie_stationary_kernels"
version = "0.1"
description = "Heat and Matern kernels on Lie groups and their homogeneous spaces"
readme = "README.md"
authors = [
    { name = "Inskander Azangulov" },
    { name = "Andrei Smolensky", email = "andrei.smolensky@gmail.com" },
    { name = "Alexander Terenin" },
    { name = "Viacheslav Borovitskiy"}
]
dependencies = [
    "numpy~=1.22.4",
    "sympy~=1.10",
    "scipy~=1.7.3",
    "geomstats~=2.5",
    "gpytorch~=1.7",
    "more_itertools~=8.13"
]

[project.optional-dependencies]
dev = [
    "parameterized~=0.8.1"
]